Move the gitea-runner into the main network
We need IPv6!

--- a/gitea-runner-config.yaml
+++ b/gitea-runner-config.yaml
@@ -4,3 +4,4 @@ runner:
 
 container:
   options: --pull=newer --cap-add=sys_admin,mknod --device=/dev/fuse --security-opt label=disable
+  network: systemd-main
